--- a/site/components/Markdown/style.scss
+++ b/site/components/Markdown/style.scss
@@ -11,16 +11,16 @@
     overflow-x: auto;
   }
 
-  ul {
-    margin-left: 0;
-    padding-left: 0;
+  // ul {
+  //   margin-left: 0;
+  //   padding-left: 0;
 
-    > li {
-      margin-left: 20px;
-      padding-left: 4px;
-      list-style-type: circle;
-    }
-  }
+  //   > li {
+  //     margin-left: 20px;
+  //     padding-left: 4px;
+  //     list-style-type: circle;
+  //   }
+  // }
 
   pre {
     margin: 0;
@@ -43,13 +43,13 @@
     font-size: 28px;
   }
 
-  h2 {
+  > h2 {
     font-size: 24px;
     line-height: 32px;
     margin: 1.6em 0 0.6em;
   }
 
-  h3 {
+  > h3 {
     font-size: 18px;
     margin: 1.6em 0 0.6em;
   }
