--- a/site/pages/Components/style.scss
+++ b/site/pages/Components/style.scss
@@ -11,31 +11,35 @@
     overflow: hidden;
 
     .main-container {
-      min-height: 500px;
-      margin-left: -1px;
-      padding: 0 50px 140px 330px;
+      min-height: 700px;
+      margin: 0 60px 60px 340px;
       overflow: hidden;
-      border-left: 1px solid #ebedf0;
+    }
+  }
+}
 
-      &.no-simulator {
-        padding-right: 60px;
+@media screen and (max-width: 768px) {
+  .side-bar {
+    display: none;
+  }
+
+  .components-page {
+    main {
+      min-width: 100%;
+
+      .main-container {
+        margin: 0 20px;
       }
     }
 
-    .simulator {
-      position: fixed;
-      top: 110px;
-      right: 0;
-      width: 500px;
-      z-index: 10;
-
-      iframe {
-        box-sizing: content-box;
-        background: #f6f6f6;
-        border: 1px solid #eaeefb;
-        width: 375px;
-        height: 667px;
-      }
+    footer {
+      display: block;
+      margin-left: 0;
     }
+  }
+
+  .za-back-to-top {
+    right: 30px !important;
+    bottom: 30px !important;
   }
 }
