--- a/site/components/Menu/style.scss
+++ b/site/components/Menu/style.scss
@@ -1,10 +1,12 @@
-.zw-menu-item {
-  .chinese {
-    margin-left: 6px;
-    opacity: .5;
+.side-bar {
+  .zw-menu-item {
+    .chinese {
+      margin-left: 6px;
+      opacity: .5;
+    }
   }
-}
 
-.zw-menu-submenu__title {
-  padding-left: 20px !important;
+  .zw-menu-submenu__title {
+    padding-left: 20px !important;
+  }
 }
