--- a/site/components/Markdown/style.scss
+++ b/site/components/Markdown/style.scss
@@ -3,12 +3,22 @@
   font-size: 14px;
   color: #1f2d3d;
 
+  a {
+    transition: color 0.3s ease;
+    color: #00bc70;
+
+    &:hover {
+      color: #00d17d;
+    }
+  }
+
   .hljs {
     background-color: transparent;
   }
 
   .grid-container {
     overflow-x: auto;
+    margin: 20px 0;
   }
 
   // ul {
@@ -24,12 +34,15 @@
 
   pre {
     margin: 0;
-    padding: 16px;
     overflow: auto;
     font-size: 14px;
     line-height: 1.5;
     background-color: #f6f8fa;
     border-radius: 3px;
+
+    code {
+      padding: 1em;
+    }
   }
 
   h1,
@@ -63,12 +76,11 @@
 
   code {
     background-color: #f1f1f1;
-    padding: 2px 6px;
-    margin: 0 1px;
+    padding: 2px 5px;
     border-radius: 3px;
   }
 
-  table {
+  table.grid {
     font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
     width: 100%;
     min-width: 600px;
