--- a/site/components/Markdown/style.scss
+++ b/site/components/Markdown/style.scss
@@ -152,11 +152,12 @@
 
   .source {
     position: relative;
-    margin: 32px 24px;
+    padding: 12px 24px 24px;
+    overflow-x: auto;
     // border-top: 1px solid #eaeefb;
 
     .rows {
-      margin-bottom: 16px;
+      margin-bottom: 12px;
 
       &:last-of-type {
         margin-bottom: 0;
