--- a/site/styles/pages/popconfirm.scss
+++ b/site/styles/pages/popconfirm.scss
@@ -1,12 +1,14 @@
 .popconfirm-page {
   .zw-button {
-    margin-right: 10px;
-    margin-bottom: 10px;
+    margin-right: 8px;
+    margin-bottom: 12px;
   }
 
   .direction-demo {
+    display: inline-block;
+
     .zw-button {
-      width: 70px;
+      width: 80px;
     }
   }
 }
